--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hx4k_dev_board/SOICbite"]
-	path = hx4k_dev_board/SOICbite
+	path = hw/SOICbite
 	url = https://github.com/SimonMerrett/SOICbite.git
