Add working UART

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "hw/outputs/kicad-jlcpcb-bom-plugin"]
 	path = hw/outputs/kicad-jlcpcb-bom-plugin
 	url = https://github.com/joshtyler/kicad-jlcpcb-bom-plugin
+[submodule "hdl/loopback_test/hdl_common"]
+	path = hdl/loopback_test/hdl_common
+	url = https://github.com/joshtyler/hdl_common.git
