--- a/hdl/loopback_test/Makefile_sim
+++ b/hdl/loopback_test/Makefile_sim
@@ -1,15 +1,15 @@
 VERILATOR = verilator
-VERILATOR_FLAGS = --trace --cc --exe --l2-name v -CFLAGS '-Wall -Wextra -g'
+VERILATOR_FLAGS = --trace --cc --exe --l2-name v -CFLAGS '-Wall -Wextra -g -I../../hdl_common/sim'
 
 VERILOG_TOP = loopback_test
 VERILOG_SOURCES = src/loopback_test.sv \
-hdl_common/synth/other/reset_gen.sv \
-hdl_common/synth/other/fifo.sv \
-hdl_common/synth/axis/axis_fifo.sv \
-hdl_common/synth/axis/axis_register.sv \
-hdl_common/synth/other/uart_rx.sv \
-hdl_common/synth/other/uart_tx.sv \
-hdl_common/synth/other/logic_cross_clock.sv
+../hdl_common/synth/other/reset_gen.sv \
+../hdl_common/synth/other/fifo.sv \
+../hdl_common/synth/axis/axis_fifo.sv \
+../hdl_common/synth/axis/axis_register.sv \
+../hdl_common/synth/other/uart_rx.sv \
+../hdl_common/synth/other/uart_tx.sv \
+../hdl_common/synth/other/logic_cross_clock.sv
 
 CPP_SOURCES = tb/test_loopback_test.cpp
 
