--- a/hdl/bootstrap/Makefile
+++ b/hdl/bootstrap/Makefile
@@ -20,7 +20,7 @@ PROJ = top
 DEVICE = 8k
 PACKAGE = tq144:4k
 
-COMMON_SYNTH_DIR = ../loopback_test/hdl_common/synth
+COMMON_SYNTH_DIR = ../hdl_common/synth
 
 # Input files
 SRC_FILES += $(COMMON_SYNTH_DIR)/wishbone/wishbone.sv
