--- a/hdl/bootstrap/Makefile_sim
+++ b/hdl/bootstrap/Makefile_sim
@@ -1,18 +1,18 @@
 VERILATOR = verilator
-VERILATOR_FLAGS = --trace --cc --exe --l2-name v -CFLAGS '-Wall -Wextra -g'
+VERILATOR_FLAGS = --trace --cc --exe --l2-name v -CFLAGS '-Wall -Wextra -g -I../../hdl_common/sim'
 
 VERILOG_TOP = top
 VERILOG_SOURCES = src/top.sv \
-../loopback_test/hdl_common/synth/other/reset_gen.sv \
-../loopback_test/hdl_common/synth/other/fifo.sv \
-../loopback_test/hdl_common/synth/axis/axis_fifo.sv \
-../loopback_test/hdl_common/synth/axis/axis_register.sv \
-../loopback_test/hdl_common/synth/other/uart_rx.sv \
-../loopback_test/hdl_common/synth/other/uart_tx.sv \
-../loopback_test/hdl_common/synth/other/logic_cross_clock.sv \
-../loopback_test/hdl_common/synth/wishbone/wishbone.sv \
-../loopback_test/hdl_common/synth/wishbone/serial_wb_master.sv \
-../loopback_test/hdl_common/synth/wishbone/simple_wb_slave.sv
+../hdl_common/synth/other/reset_gen.sv \
+../hdl_common/synth/other/fifo.sv \
+../hdl_common/synth/axis/axis_fifo.sv \
+../hdl_common/synth/axis/axis_register.sv \
+../hdl_common/synth/other/uart_rx.sv \
+../hdl_common/synth/other/uart_tx.sv \
+../hdl_common/synth/other/logic_cross_clock.sv \
+../hdl_common/synth/wishbone/wishbone.sv \
+../hdl_common/synth/wishbone/serial_wb_master.sv \
+../hdl_common/synth/wishbone/simple_wb_slave.sv
 
 CPP_SOURCES = tb/test_bootstrap.cpp
 
