Basic sim working

--- a/hdl/bootstrap/Makefile_sim
+++ b/hdl/bootstrap/Makefile_sim
@@ -7,6 +7,7 @@ VERILOG_SOURCES = src/top.sv \
 ../hdl_common/synth/other/fifo.sv \
 ../hdl_common/synth/axis/axis_fifo.sv \
 ../hdl_common/synth/axis/axis_register.sv \
+../hdl_common/synth/axis/axis_spi_bridge.sv \
 ../hdl_common/synth/other/uart_rx.sv \
 ../hdl_common/synth/other/uart_tx.sv \
 ../hdl_common/synth/other/logic_cross_clock.sv \
@@ -14,7 +15,8 @@ VERILOG_SOURCES = src/top.sv \
 ../hdl_common/synth/wishbone/serial_wb_master.sv \
 ../hdl_common/synth/wishbone/simple_wb_slave.sv \
 ../hdl_common/synth/wishbone/wb_to_spi_master.sv \
-../hdl_common/synth/wishbone/wb_interconnect.sv 
+../hdl_common/synth/wishbone/wb_axis_bridge.sv \
+../hdl_common/synth/wishbone/wb_interconnect.sv
 
 CPP_SOURCES = tb/test_bootstrap.cpp
 
