--- a/hdl/bootstrap/Makefile_sim
+++ b/hdl/bootstrap/Makefile_sim
@@ -3,6 +3,7 @@ VERILATOR_FLAGS = --trace --cc --exe --l2-name v -CFLAGS '-Wall -Wextra -g -I../
 
 VERILOG_TOP = top
 VERILOG_SOURCES = src/top.sv \
+tb/pll_model.sv \
 ../hdl_common/synth/other/reset_gen.sv \
 ../hdl_common/synth/other/fifo.sv \
 ../hdl_common/synth/axis/axis_fifo.sv \
@@ -18,7 +19,7 @@ VERILOG_SOURCES = src/top.sv \
 ../hdl_common/synth/wishbone/wb_axis_bridge.sv \
 ../hdl_common/synth/wishbone/wb_interconnect.sv
 
-CPP_SOURCES = tb/test_bootstrap.cpp 
+CPP_SOURCES = tb/test_bootstrap.cpp
 
 default : run
 
