Playing back SPI commands at boot working

--- a/hdl/bootstrap/Makefile
+++ b/hdl/bootstrap/Makefile
@@ -26,11 +26,13 @@ COMMON_SYNTH_DIR = ../hdl_common/synth
 SRC_FILES += $(COMMON_SYNTH_DIR)/wishbone/wishbone.sv
 SRC_FILES += $(SRC_DIR)/pll.sv
 SRC_FILES += $(SRC_DIR)/top.sv
+SRC_FILES += $(SRC_DIR)/boot_manager.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/other/reset_gen.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/other/fifo.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/axis/axis_fifo.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/axis/axis_register.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/axis/axis_spi_bridge.sv
+SRC_FILES += $(COMMON_SYNTH_DIR)/axis/rom_to_axis.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/other/uart_rx.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/other/uart_tx.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/other/logic_cross_clock.sv
