--- a/sw/sdram_test/Makefile
+++ b/sw/sdram_test/Makefile
@@ -3,7 +3,7 @@ CC=g++
 # N.B. stealing source from SPI prog
 CXXFLAGS=-c -Wall  -g -I../spi_prog
 LDFLAGS=-lserial -lpthread
-SOURCES= sdram_test.cpp ../spi_prog/VectorUtility.cpp
+SOURCES= sdram_test.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=sdram_test
 
