--- a/hdl/bootstrap/Makefile
+++ b/hdl/bootstrap/Makefile
@@ -33,7 +33,9 @@ SRC_FILES += $(COMMON_SYNTH_DIR)/axis/axis_fifo.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/axis/axis_register.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/axis/axis_spi_bridge.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/axis/rom_to_axis.sv
+SRC_FILES += $(COMMON_SYNTH_DIR)/axis/vector_to_axis.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/axis/axis_width_converter.sv
+SRC_FILES += $(COMMON_SYNTH_DIR)/axis/axis_spacer.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/other/uart_rx.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/other/uart_tx.sv
 SRC_FILES += $(COMMON_SYNTH_DIR)/other/logic_cross_clock.sv
