Move example project to use makefile template

--- a/hdl/bootstrap/Makefile
+++ b/hdl/bootstrap/Makefile
@@ -33,7 +33,7 @@ SIM_HDL_TOP   = $(SRC_DIR)/top.sv
 
 SIM_CPP_SRC_FILES += tb/test_bootstrap.cpp
 PCF_FILE = $(SRC_DIR)/pins.pcf
-CLOCK_CONSTRAINTS = $(SRC_DIR)/clk.py
+CLOCK_CONSTRAINTS_FILE = $(SRC_DIR)/clk.py
 
 VERILATOR_CFLAGS += -Wall -Wextra -g -I../../hdl_common/sim
 
