--- a/hdl/uart_loopback/Makefile
+++ b/hdl/uart_loopback/Makefile
@@ -19,7 +19,7 @@ SYNTH_HDL_TOP = $(SRC_DIR)/loopback_test.sv
 SIM_HDL_TOP   = $(SRC_DIR)/loopback_test.sv
 
 SIM_CPP_SRC_FILES += tb/test_loopback_test.cpp
-PCF_FILE = $(SRC_DIR)/pins.pcf
+PCF_FILE = ../pins.pcf
 CLOCK_CONSTRAINTS_FILE = $(SRC_DIR)/clk.py
 
 VERILATOR_CFLAGS += -Wall -Wextra -g -I../../hdl_common/sim
