Update scipts so that manila installs with CMake build. Needs to be improved, it's hacky becuase I wanted to get it working...

--- a/sw/scripts/Makefile
+++ b/sw/scripts/Makefile
@@ -5,15 +5,19 @@
 BIN_DIR=/usr/local/bin
 AUX_DIR=/usr/local/share
 
-depends: ../spi_prog/spi_prog
+depends: ../spi_prog/build/spi_prog
 
-../spi_prog/spi_prog:
-	make -C ../spi_prog
+../spi_prog/build/spi_prog:
+	# This is a super hacky way to cmake build. TODO: Do better
+	rm -rf ../spi_prog/build
+	mkdir ../spi_prog/build
+	cd ../spi_prog/build && cmake ..
+	make -C ../spi_prog/build
 
 install: ../spi_prog/spi_prog uninstall
 	mkdir ${AUX_DIR}/manila
 	cp *.sh ${AUX_DIR}/manila/
-	cp ../spi_prog/spi_prog ${AUX_DIR}/manila/
+	cp ../spi_prog/build/spi_prog ${AUX_DIR}/manila/
 	ln -s ${AUX_DIR}/manila/manila.sh ${BIN_DIR}/manila
 
 uninstall:
